# clip

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt.txt  requirements_dev.txt
src/womens_clothing/: printy.py
